[package]
name = "distant_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
log = { version = "0.4.22", features = ["std"] }
nu-ansi-term = "0.50.1"
promkit = "0.5.0"
reedline = { version = "0.36.0", features = ["external_printer"] }
serde = "1.0.213"
toml = { version = "0.8.19", features = ["preserve_order"] }
