[package]
name = "distant_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
future-utils = "0.12.1"
futures-util = { version = "0.3.31", features = ["sink"] }
log = { version = "0.4.22", features = ["std"] }
nu-ansi-term = "0.50.1"
promkit = "0.5.0"
reedline = { version = "0.36.0", features = ["external_printer"] }
reqwest = { version = "0.12.9", default-features = false, features = ["h2", "rustls-tls-manual-roots", "charset"] }
reqwest-websocket = "0.4.3"
rustls = "0.23.16"
serde = "1.0.213"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.26.0"
toml = { version = "0.8.19", features = ["preserve_order"] }
